// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renders correctly 1`] = `
<div>
  <h1>
    Stats for 
    Test Season
  </h1>
  <button
    className="button-chart"
    id="chart-button-active"
    onClick={[Function]}
  >
    See game-by-game
  </button>
  <button
    className="button-chart"
    id=""
    onClick={[Function]}
  >
    See incrementally
  </button>
  <div>
    <p>
      I am a mock chart.
    </p>
    <div
      className="test-data"
    >
      1,2,4.2,5,6
    </div>
    <canvas
      height="150"
      width="400"
    />
  </div>
</div>
`;

exports[`teams are hidden by default after third team 1`] = `
<div>
  <h1>
    Stats for 
    Second Season
  </h1>
  <button
    className="button-chart"
    id="chart-button-active"
    onClick={[Function]}
  >
    See game-by-game
  </button>
  <button
    className="button-chart"
    id=""
    onClick={[Function]}
  >
    See incrementally
  </button>
  <div>
    <p>
      I am a mock chart.
    </p>
    <div
      className="test-data"
    >
      1,2,4,5,6
    </div>
    <canvas
      height="150"
      width="400"
    />
  </div>
</div>
`;
